# sprint-planner

./: .gitignore  CLAUDE.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251226_000001_initial_schema.py
backend/app/: main.py
backend/app/api/dependencies/: auth.py  database.py  services.py
backend/app/api/routes/: auth.py  sessions.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  security.py
backend/app/integrations/jira/: __init__.py  client.py  exceptions.py
backend/app/models/: __init__.py  auth.py  base.py  error.py  session.py  ticket.py  upload.py
backend/app/repositories/: __init__.py
backend/app/repositories/interfaces/: __init__.py  auth_repository.py  error_repository.py  session_repository.py  ticket_repository.py  upload_repository.py
backend/app/repositories/sqlalchemy/: __init__.py  auth_repository.py  error_repository.py  session_repository.py  ticket_repository.py  upload_repository.py
backend/app/schemas/: auth.py  base.py
backend/app/services/: __init__.py  exceptions.py  session_service.py
backend/tests/: conftest.py
backend/tests/backend/unit/test_models/: test_auth_models.py  test_error_models.py  test_session_models.py  test_ticket_models.py  test_upload_models.py
backend/tests/backend/unit/test_repositories/: test_auth_repository.py  test_error_repository.py  test_session_repository.py  test_ticket_repository.py  test_upload_repository.py
docs/: README.md  drupal_ticket_generator_prd.md
docs/api/: fastapi_jira_integration_endpoints.md  fastapi_processing_endpoints.md  fastapi_upload_endpoints.md
docs/architecture/: CSV_Type_Registry_Structure_Specification.md  Complete_Repository_Interface_Specifications.md  Comprehensive_Updated_Directory_Structure_updated.md  Missing_Response_Models_-_Complete_Specifications.md  SQLAlchemy_Relationship_Bidirectional_Consistency_Audit_updated.md  Task_Management_Architecture_Standardization.md  background_task_infrastructure.md  fastapi_di_lifecycle_decisions_updated.md  repository_patterns_decisions_updated.md  updated_auth_flow_spec.md  updated_error_response_standards.md
docs/decisions/: discrepancy_resolution_decisions.md  documentation_review_decisions.md  documentation_review_session_decisions.md  missing_implementation_decisions.md
docs/implementation/: phase_1_foundation_infrastructure.md  phase_2_authentication_session.md  phase_3_file_upload_validation.md  phase_4_processing_ticket_generation.md  phase_5_review_stage.md  phase_6_jira_export.md
docs/models/: attachment_model_spec.md  audit_log_model_spec.md  jira_auth_token_model_spec.md  jira_project_context_model_spec.md  session_error_model_spec.md  session_model_spec.md  session_task_model_spec.md  session_validation_model_spec_updated.md  ticket_dependency_model_spec.md  ticket_model_spec_updated.md  uploaded_file_model_spec_updated.md
docs/schemas/: auth_schemas_models_updated.py  base_schemas_models_updated.py  upload_schemas_models.py
docs/services/: LLM_Service_Scope_and_Interface_Specification.md  export_service_architecture_updated.md  (+4 more)
tests/: conftest.py
(+36 files in other folders)
